--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
         "vite": "^6.0",
         "vue": "^3.4.0",
         "vue-tsc": "^2.0.24"
+    },
+    "dependencies": {
+        "@primevue/themes": "^4.2.5",
+        "primeicons": "^7.0.0",
+        "primevue": "^4.2.5"
     }
 }
